@@ -183,4 +183,6 @@ Although, there's a chance with some data it will give different results than th
 
 ========================== subset_data() ============================
 - FIX: subset_data() - fix for failure with inspect() objects
-- FIX: by = "proportion" now works correctly with oxygen production data (change to truncate_data)
+- FIX: by = "proportion" and by = "o2" now work correctly with oxygen production data (changes made to truncate_data)
+- Note changes above now generally result in larger/longer subsets. Extra rows are at the end (because of change in identifying where 'to' is - see comment on calc_rate)
+- Rewrote help docs - especially specified by = oxygen/proportion applies to first column in multiple O2 column dataframes
